# irs-web-demo

./: README.md  conda-setup.ps1  pyproject.toml
src/: README.md
src/irs_web/: main.py  run_server.py
src/irs_web/static/js/: socket.js  spinner.js  storage.js
src/irs_web/static/prism/css/: prism.css
src/irs_web/static/prism/js/: prism.js
src/irs_web/templates/: index.html  station.html
src/irs_web/templates/child-templates/: overview.html  socket.html  spinner.html  storage.html  tech-stack.html
